<resources>
    <string name="app_name">Beauty makeup</string>
    <string name="splas_title">炒股变得更简单</string>
    <string name="site">仓位</string>
    <string name="add">新建</string>
    <string name="point">目标点</string>
    <string name="base_info">基本信息</string>
    <string name="name">股票名称</string>
    <string name="code">股票代码</string>
    <string name="point_transfrom">目标点/平移</string>
    <string name="totalPrice">总投入资金</string>
    <string name="appreciate">跌幅</string>
    <string name="pricebalance">资金配比</string>
    <string name="level1">第一梯队</string>
    <string name="level2">第二梯队</string>
    <string name="level3">第三梯队</string>
    <string name="nowprice">当前价位(买入点)</string>
    <string name="singlecount">单次股数</string>
    <string name="singleprice">单次投放金额</string>
    <string name="maxwin">最大赚数</string>
    <string name="maxloser">最大亏数</string>
    <string name="save">保存</string>
    <string name="phonenum">手机</string>
    <string name="updatepwd">修改密码</string>
    <string name="phonenumber">手机号</string>
    <string name="pwd">密码</string>
    <string name="checkversion">检测更新</string>
    <string name="loginout">退出登录</string>
    <string name="wareband1">波段[1]</string>
    <string name="wareband2">波段[2]</string>
    <string name="wareband3">波段[3]</string>
    <string name="update">修改</string>
    <string name="bl">1:1:3</string>
    <string name="login">登录</string>
    <string name="netfial">网络不可用</string>
    <string name="loginfial">登录失败</string>
    <string name="pwderror">密码错误</string>
    <string name="savepass">保存成功</string>
    <string name="nodata">暂无数据</string>
    <string name="totalcount">总股数</string>
    <string name="nologin">尚未登录</string>
    <string name="no100"> (不足100股,请核对)</string>
    <string name="bfb"> -26.5%</string>
    <string name="infonotwrite"> 信息输入不完整</string>
    <string name="balance_1"> 比例1</string>
    <string name="balance_2"> 比例2</string>
    <string name="balance_3"> 比例3</string>
    <string name="updateprice">修改买入价格</string>
    <string name="cancle">取消</string>
    <string name="sure">确认</string>
    <!--下面开始新的string-->
    <string name="preferred">优选</string>
    <string name="order">订单</string>
    <string name="mine">我的</string>
    <string name="menu_search">妆口袋 开启美一天</string>
    <string name="Spell_group">拼团</string>
    <string name="The_trial">试用</string>
    <string name="coupons">优惠券</string>
    <string name="crash_error_msg">很抱歉,程序出现异常,即将退出.</string>

    <string name="state_all">全部</string>
    <string name="state_unpay">待付款</string>
    <string name="state_unsend">待发货</string>
    <string name="state_unaccept">待收货</string>
    <string name="state_end">已完成</string>
    <string name="username">张三</string>
    <string name="integral">积分</string>
    <string name="degree">白银</string>
    <string name="address">收货地址</string>
    <string name="ticket">优惠券</string>
    <string name="customer_service">联系客服</string>
    <string name="help">帮助中心</string>
    <string name="suggest">意见反馈</string>


    <string name="receiving_address">管理收货地址</string>
    <string name="add_address">新增收货地址</string>
    <string name="edit_address">修改收货地址</string>

    <string name="info_people">收货人</string>
    <string name="write_people">请填写收货人</string>
    <string name="info_phone">联系电话</string>
    <string name="write_phone">手机或固定电话</string>
    <string name="info_local">收货区域</string>
    <string name="write_local">选择收货区域</string>
    <string name="info_address">详细地址</string>
    <string name="write_address">街道或门牌信息</string>
    <string name="info_post">邮政编码</string>
    <string name="write_post">邮政编码(选填)</string>
    <string name="dialog_ok">确定</string>
    <string name="static_add">添加</string>
    <string name="static_save">保存</string>
    <string name="dialog_cancel">取消</string>
    <string name="del">删除收获地址</string>
    <string name="me_ticket">我的优惠</string>
    <string name="all_ticket">全部优惠</string>
    <string name="all_kind">全品类</string>
    <string name="kindname">美团券</string>
    <string name="kindprice">200元(满1000元可用)</string>
    <string name="kindtime">2017年12月19日 15:18:36-2017年12月19日 15:18:39</string>
    <string name="now">立即领取</string>

    <string name="help_1">1.如何申请退款维权?</string>
    <string name="help_2">2.我已经付款了,商家怎么还没发货?</string>
    <string name="help_3">3.订单信息填错了,怎么修改?</string>
    <string name="help_4">4.订单已经显示退款了,怎么还没有到账?</string>
    <string name="help_5">5.找不到换货的地方,该怎么办?</string>
    <string name="tempphone">13800138001</string>


    <string name="suggest_right">请勾选以下建议</string>

    <string name="suggest_1">给app界面优化的建议</string>
    <string name="suggest_2">给购物体验的建议</string>
    <string name="suggest_3">给售后服务的建议</string>
    <string name="suggest_4">其他建议</string>
    <string name="suggest_write">请留下您的宝贵建议</string>
    <string name="suggest_submit">提交建议</string>
    <string name="preferred_detail">飞科(FLYCO)FS376智能电动剃须刀 全身水洗刮胡刀</string>
    <string name="temp_price">¥349.00</string>
    <string name="price">实付款:¥349.00</string>
    <string name="temp_count">已出售1000件</string>


    <string name="p_1">香水彩妆</string>
    <string name="p_2">面部护肤</string>
    <string name="p_3">洗发护发</string>
    <string name="p_4">身体护理</string>
    <string name="p_5">口腔护理</string>
    <string name="p_6">女性护理</string>


    <string name="shop_info">商品详情</string>

    <string name="detail_0">运费</string>
    <string name="detail_1">免运费</string>
    <string name="detail_2">497</string>
    <string name="detail_3">19</string>

    <string name="detail_pic">图片详情</string>
    <string name="now_buy">立即下单</string>
    <string name="last">下一步</string>
    <string name="count">购买数量:剩余</string>
    <string name="wait_pay">等待买家付款</string>
    <string name="getmen">收货人:</string>
    <string name="address_detail">广东省深圳市南山区高兴园区</string>
    <string name="countadd">X 19</string>
    <string name="waysend">配送方式</string>
    <string name="send1">免运费</string>
    <string name="send2">快递发货</string>
    <string name="write">给卖家留言</string>
    <string name="write_hint">点击给卖家留言</string>
    <string name="total">合计</string>
    <string name="preferential">优惠</string>
    <string name="tips">短信通知收件人</string>
    <string name="shopprice">商品金额</string>
    <string name="offset">积分抵扣(100积分等于1元)</string>
    <string name="ok_submit">提交订单</string>

</resources>
