<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:linetv="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rel_topbyme"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:background="@color/colorAccent"
        >

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:src="@mipmap/back_white"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/add_address"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rel_topbyme"

        android:orientation="vertical">

        <com.wanjianhua.aooshop.act.utils.line.LineEditTextView
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_margin="10dp"
            android:gravity="center_vertical"
            linetv:lefttext="@string/info_people"
            linetv:righttext="@string/write_people"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray_normal"/>

        <com.wanjianhua.aooshop.act.utils.line.LineEditTextView
            android:id="@+id/line2"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_margin="10dp"
            android:gravity="center_vertical"
            android:inputType="number"
            linetv:lefttext="@string/info_phone"
            linetv:righttext="@string/write_phone"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray_normal"/>

        <com.wanjianhua.aooshop.act.utils.line.LineEditTextView
            android:id="@+id/line3"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_margin="10dp"
            android:gravity="center_vertical"
            linetv:lefttext="@string/info_local"
            linetv:righttext="@string/write_local"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray_normal"/>

        <com.wanjianhua.aooshop.act.utils.line.LineEditTextView
            android:id="@+id/line4"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_margin="10dp"
            android:gravity="center_vertical"
            linetv:lefttext="@string/info_address"
            linetv:righttext="@string/write_address"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray_normal"/>

        <com.wanjianhua.aooshop.act.utils.line.LineEditTextView
            android:id="@+id/line5"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_margin="10dp"
            android:gravity="center_vertical"
            linetv:lefttext="@string/info_post"
            linetv:righttext="@string/write_post"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray_normal"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="54dp"
        android:background="@drawable/selector_btn_login"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:visibility="visible"/>


</RelativeLayout>