<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="110dp"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:id="@+id/linear_left"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_gravity="left"
            android:background="@color/app_color"
            android:gravity="center"
            android:minWidth="35dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:ems="1"
                android:gravity="center"
                android:text="@string/all_kind"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:layout_toLeftOf="@+id/linear_right"
            android:layout_toRightOf="@+id/linear_left"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_kindname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kindname"
                android:textColor="@color/app_color"/>

            <TextView
                android:id="@+id/tv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/kindprice"/>

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:singleLine="true"
                android:text="@string/kindtime"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_right"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="center"
            android:background="@color/app_color"
            android:gravity="center"
            android:minWidth="105dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/now"
                android:textColor="@color/white"/>
        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>