<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
    >

    <RelativeLayout
        android:id="@+id/rel_state"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_centerVertical="true"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/linear_shopstate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_alignParentLeft="true"
                android:src="@mipmap/sample_pic"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:text="@string/preferred_detail"
                android:textColor="@color/userlist_gray"
                android:textSize="16sp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/linear_shopstate"
            android:layout_marginTop="5dp"
            android:text="@string/state_unaccept"
            android:textColor="@color/black"
            android:textSize="14sp"
            />

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/linear_shopstate"
            android:layout_marginTop="5dp"
            android:text="@string/price"
            android:textSize="14sp"
            />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_below="@+id/rel_state"
        android:background="@color/common_bg"
        ></View>
</RelativeLayout>
